# Lab_OOP_2024

./: CMakeLists.txt  README.md
docs/: LAB1.doc  LAB2.doc  LAB3.doc
include/exceptions/: ability_error.h  bad_file.h  base_exception.h  illegal_move.h  incorrect_coordinates.h  incorrect_ship_placement.h
include/game/: ability.h  ability_manager.h  board.h  board_coordinates.h  cell.h  cell_info.h  game_controller.h  game_state.h  move.h  parameters.h  segment.h  ship.h  ship_manager.h
include/game/abilities/: double_attack.h  random_attack.h  scanner.h
include/view/: interface_info.h  view.h
include/view/test_view/: test_view.h
saves/: bad_save  good_save_1  good_save_2
src/: main.cpp
src/exceptions/: ability_error.cpp  bad_file.cpp  illegal_move.cpp  incorrect_coordinates.cpp  incorrect_ship_placement.cpp
src/game/: ability_manager.cpp  board.cpp  board_coordinates.cpp  cell_info.cpp  game_controller.cpp  game_state.cpp  move.cpp  parameters.cpp  segment.cpp  ship.cpp  ship_manager.cpp
src/game/abilities/: double_attack.cpp  random_attack.cpp  scanner.cpp
src/view/: interface_info.cpp
src/view/test_view/: test_view.cpp
