cmake_minimum_required(VERSION 3.10)

project(sea_battle CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(GLOB GAME_CPP "src/game/*" "src/game/abilities/*" "src/view/interface_info.cpp")
file(GLOB GAME_H "include/game/*" "include/game/abilities/*" "include/view/interface_info.h")
file(GLOB TEST_VIEW_H "include/view/*" "include/view/test_view/*" "include/game/cell.h" "include/game/move.h")
file(GLOB TEST_VIEW_CPP "src/view/*" "src/view/test_view/*" "src/game/move.cpp")
file(GLOB EXCEPTIONS_CPP "src/exceptions/*")
file(GLOB EXCEPTIONS_H "include/exceptions/*")
add_compile_options(-Wall -Wextra -Werror -O2)
if (NOT CMAKE_CXX_FLAGS)
  add_compile_options(-fsanitize=address -fsanitize=undefined)
  add_link_options(-fsanitize=address -fsanitize=undefined)
endif (NOT CMAKE_CXX_FLAGS)
add_library(GAME ${GAME_CPP} ${GAME_H})
add_library(TEST_VIEW ${TEST_VIEW_CPP} ${TEST_VIEW_H})
add_library(EXCEPTIONS ${EXCEPTIONS_CPP} ${EXCEPTIONS_H})
target_include_directories(GAME PUBLIC include/game include/view include/exceptions)
target_include_directories(TEST_VIEW PUBLIC include/view include/view/test_view include/game include/exceptions)
target_include_directories(EXCEPTIONS PUBLIC include/exceptions)
add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} GAME TEST_VIEW EXCEPTIONS)
